--- a/web-ui/src/main/resources/static/index.html
+++ b/web-ui/src/main/resources/static/index.html
@@ -8,16 +8,19 @@
 
 <body>
 
-    <div ng-app="GenAlg">
-        <div class="container" ng-controller="index-controller" >
-            <h1>{{numIteration}}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+
+
+            <div class="list-group lab-menu">
+                <h1 class="list-group-item-heading">Lab works</h1>
+                <a href="neuralnet.html" class="list-group-item">Genetic algorithm</a>
+                <a href="genetic.html" class="list-group-item">Neural network</a>
+            </div>
+
         </div>
     </div>
-
-
-    <!-- Angular include files -->
-    <script src="js/angular.min.js" type="text/javascript"></script>
-    <script src="js/app.js"></script>
 
 </body>
 </html>
