--- a/web-ui/src/main/resources/static/index.html
+++ b/web-ui/src/main/resources/static/index.html
@@ -15,8 +15,8 @@
 
             <div class="list-group lab-menu">
                 <h1 class="list-group-item-heading">Lab works</h1>
-                <a href="neuralnet.html" class="list-group-item">Genetic algorithm</a>
-                <a href="genetic.html" class="list-group-item">Neural network</a>
+                <a href="genetic.html" class="list-group-item">Genetic algorithm</a>
+                <a href="neuralnet.html" class="list-group-item">Neural network</a>
             </div>
 
         </div>
