--- a/web-ui/src/main/resources/static/genetic.html
+++ b/web-ui/src/main/resources/static/genetic.html
@@ -17,12 +17,14 @@
         </div>
         <div class="row form-group">
             <div class="canvas-container">
-                <canvas id="myCanvas" width="240" height="130"></canvas>
+                <canvas id="myCanvas" width="240" height="280"></canvas>
             </div>
         </div>
         <div class="row">
             <h2 class="heading">Best Score</h2>
             <h2 class="heading">{{ bestScore }}</h2>
+            <h2 class="heading">Best Fitness</h2>
+            <h2 class="heading">{{ bestFitness }}</h2>
         </div>
     </div>
 
