Rerun button implemented

--- a/web-ui/src/main/resources/static/genetic.html
+++ b/web-ui/src/main/resources/static/genetic.html
@@ -26,6 +26,11 @@
             <h2 class="heading">Best Fitness</h2>
             <h2 class="heading">{{ bestFitness }}</h2>
         </div>
+        <div class="row gen-buttons">
+            <div class="col-md-4 col-md-offset-4 content">
+                <button type="button" class="btn btn-default restart" ng-click="restart()">Restart</button>
+            </div>
+        </div>
     </div>
 
 
